# 2021-10-28_Textarbeit-mit-Python

./: Pipfile  README.md  pyproject.toml
.binder/: postBuild
.github/workflows/: ci.yml  workflow.yml
notebooks/: reader.py  ws-pytext-pt01-intro.ipynb  ws-pytext-pt02-uebung-grundlagen.ipynb  ws-pytext-pt03a-nltk-intro.ipynb  ws-pytext-pt03b-nltk-basics.ipynb  ws-pytext-pt04a-daten-beschaffen.ipynb  ws-pytext-pt04b-daten-beschaffen.ipynb  ws-pytext-pt05a-texte-analysieren.ipynb  ws-pytext-pt05b-uebung-texte-analysieren.ipynb  ws-pytext-pt06a-texte-visualisieren-heatmap.ipynb  ws-pytext-pt06b-texte-visualisieren-wortwolke.ipynb  ws-pytext-pt07-outro.ipynb  ws-pytext-pt1-intro.ipynb  ws-pytext-pt2-uebung-grundlagen.ipynb  ws-pytext-pt3a-nltk-intro.ipynb  ws-pytext-pt3b-nltk-basics.ipynb  ws-pytext-pt4a-daten-beschaffen.ipynb  ws-pytext-pt4b-daten-beschaffen.ipynb  ws-pytext-pt4c-daten-beschaffen.ipynb  ws-pytext-pt4d-daten-beschaffen.ipynb  ws-pytext-pt4e-daten-beschaffen.ipynb  ws-pytext-pt4f-daten-beschaffen.ipynb  ws-pytext-pt5a-texte-analysieren.ipynb  ws-pytext-pt5b-uebung-texte-analysieren.ipynb  ws-pytext-pt6a-texte-visualisieren-heatmap.ipynb  ws-pytext-pt6b-texte-visualisieren-wortwolke.ipynb  ws-pytext-pt7-outro.ipynb
