[tool.poetry]
name = "textarbeit-mit-python"
version = "2022.06.14"
description = "Workshop to get to know the programming language Python"
authors = [
    "Heinz-Alexander Fütterer <fuetterer@ub.fu-berlin.de>",
    "Selina Reinhard <selina.reinhard@fu-berlin.de>"
]
license = "CC-BY-4.0"

[tool.poetry.dependencies]
python = "^3.8"
HanTa = "^0.2.0"
jupyterlab = {version = "^3.4.2", optional = true}
nltk = "^3.7"
pandas = "^1.4.2"
requests = "^2.27.1"
session-info = "^1.0.0"
stylecloud = "^0.5.2"
# Seaborn installation failure, when compiling from source
# install with "pip install seaborn==0.11.2"
# seaborn = "^0.11.2"

[tool.poetry.extras]
jupyter = ["jupyterlab"]

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.3.0"}
isort = "^5.10.1"
nbqa = "^1.3.1"
nbstripout = "^0.5.0"
nbval = "^0.9.6"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
py_version = 310
