[project]
name = "textarbeit-mit-python"
version = "2023.08.15"
description = "Workshop to get to know the programming language Python"
readme = "README.md"
license = "CC-BY-4.0"
authors = [
  { name = "Heinz-Alexander Fütterer", email = "fuetterer@ub.fu-berlin.de" },
  { name = "Selina Reinhard", email = "selina.reinhard@fu-berlin.de" },
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "hanta~=1.1",
  "nltk~=3.8",
  "pandas~=2.0",
  "requests~=2.31",
  "seaborn~=0.12",
  "session-info",
  "wordcloud~=1.9",
]
[project.optional-dependencies]
jupyter = [
  "jupyterlab",
]
[project.urls]
Source = "https://github.com/FDM-FUBerlin/Textarbeit-mit-Python"

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.hatch.envs.default]
dependencies = [
  "nbval",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest --nbval-lax {args:notebooks}"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black[jupyter]",
  "nbstripout",
  "ruff",
]
[tool.hatch.envs.lint.scripts]
fmt = "black {args:notebooks}"
lint = "ruff {args:notebooks}"
strip = "nbstripout {args:notebooks}"
all = [
  "fmt",
  "lint",
]

[tool.black]
line-length = 100
target_version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["B", "E", "F", "I", "S", "TCH", "UP"]
ignore = [
  "B018", # useless-expression
  "E402", # module-import-not-at-top-of-file
  "E501", # line-too-long
  "F401", # unused-import
  "E703", # useless-semicolon
]
target-version = "py38"
include = ["*.py", "*.ipynb", "pyproject.toml"]

[tool.ruff.per-file-ignores]
"notebooks/ws-pytext-pt02-uebung-grundlagen.ipynb" = ["B015", "UP003"]
"notebooks/ws-pytext-pt03b-nltk-basics.ipynb" = ["UP015"]
